2026.1/Lab_instructions/lab6.md
# Лабораторная работа 6

## Улучшение передачи потока данных между PS и PL используя PS DMA

## Обзор

В пятой лабораторной работе мы расширили наш *Block Design* с помощью увеличения пространства памяти PL-блоком BRAM (Block RAM). Мы можем использовать BRAM в качестве буффера данных, передаваемых между PL и PS. В этой лабораторной работе мы добавим программное приложение, позволяющее активировать движок PS DMA, чтобы показать насколько улучшается эффективность передачи данных между BRAM, основанном на PL и Внешней DDR3-памятью.

## Цель работы

После выполнения лабораторной работы вы сможете:

* Создавать новое программное приложение на C и импортировать исходный код на С
* Использовать *PS DMA* и *GIC-контроллеры*
* Выполнять DMA-операции используя *PS DMA*

## Эксперимент 1: Тестирование PS DMA Controller'a

Этот эксперимент покажет, как *PS DMA Controller* Может улучшить передачу данных между PS и PL.

---

### **Обобщенная инструкция:**

Создайте новое приложение на C и импортируйте туда C-код (dma_test) для тестирования DMA-транзакции.

---

### **Пошаговая инструкция:**

1. Для данной лабораторной работы необходимо использовать существующий проект из пятой лабораторной работы.

2. В *Vivado* нажмите **Open Implemented Design**, если еще не открыт (в области *Flow Navigator->Implementation*). Нажмите **Reload** если нужно.

3. Нажмите **File->Export->Export Hardware...** и выберите локацию `ZynqDesign.lab6`. Убедитесь, что вы экспортируете *bitstream*, так как теперь у нас есть IP в PL. Нажмите **OK**.

    ![Добавить битстрим](./resources/lab6/Include%20Bitstream.png)

    ![Добавить битстрим](./resources/lab6/Include%20Bitstream_2.png)

4. Запустите *Vitis IDE*. Установите в качестве Workspace ~~на только что созданную локацию **ZynqDesign.lab6/**~~ `С:\Users\<USER NAME>\ZynqDesign.lab6\ZynqDesign.vitis`.

    Создание нового рабочего пространства означает, что наши прошлые созданные приложения и платформы не будут отображаться. Однако контролирование рабочего пространства и то, что туда импортируется и обновляется, очень важно. Сейчас мы пересоздадим *Platform Component* и импортируем туда ранее созданные приложения.

5. Создайте новый *Platform Component*, как это делалось в предыдущих работах, используя созданный в этой работе **.xsa** файл.  

6. Откройте окно импорта, выбрав в меню **File -> Import...**. В открывшимся окне выберите архив, полученный в конце третьей лабораторной работы. Нажмите **Next**.

    ![Импорт архива](./resources/lab6/Import%20Archive.png)

7. Укажите, какие компоненты вы хотите импортировать. Нажмите **Next** и **Finish**. 

    ![Импорт компонент](./resources/lab6/Import%20Components.png)


8. Импортированные приложения будут добавлены в текущую рабочую область. Выполните их сборку и загрузку для проверки работоспособности. 

    ![Результат запуска Hello World](./resources/lab2/Lab1_scrin.png)

    ![Результаты запуска MemTest](./resources/lab3/Memory%20Test%20Results.png)

    ![Результаты запуска PeriphTest](./resources/lab3/Peripheral%20Test%20Results.png)

9. Для тестирования BRAM уже есть нужный исходный код. Однако нужно создать *Application Component*. Создайте новый компонент из примера **Empty Application**. Укажите `BRAM_DMA_Test` в качестве имени.

    ![Создание пустого проекта](./resources/lab6/Create%20Empty%20App.png)

10. Скачайте файл `dma_test.c`, приложенный к описанию данной работы. 

11. В окне *Vitis Explorer* раскройте **BRAM_DMA_Test/Source**, нажмите правой кнопкой мыши на **src** и выберите **Import --> Files...**

    ![Импортировать исходники](./resources/lab6/Import%20code%20source.png)

12. В открывшемся окне выберете скачанный ранее файл `dma_test.c`.

13. Соберите проекты платформы и приложения.

14. Теперь, поскольку для наших целей мы используем PL, оно должно быть запрограммировано. Убедитесь, что в конфигурации запуска установлена галочка напротив **Program Device**.

    ![программирование FPGA](./resources/lab6/Program%20FPGA.png)

15. Запустите созданный нами тест.

16. Программа должна запросить размер *burst'a* для операций с BRAM. Исследуйте разные размеры байтов и режимы передачи, чтобы сравнить результаты работы с использованием DMA и без.

    ![Тест на терминале](./resources/lab6/BRAM_DMA_TEST%20running%20on%20Terminal.png)

    В этой лабораторной работе мы изучили BRAM, подключенную к процессорной системе, чтобы вы могли увидеть, как выполнять передачу данных с помощью DMA внутри памяти или между двумя различными типами памяти. Мы проверили функциональность с помощью предоставленного приложения. Мы заметили, что DMA значительно лучше справляется с BRAM по сравнению с DDR, поскольку транзакции для блочной оперативной памяти проходят через межсоединение AXI, а BRAM работает на меньшей скорости.

17. Продолжите эксперимент с DMA в терминале, отвечая на вопросы ниже.

### **Вопросы:**

* Был ли необходим новый *Platform Project* для этого приложения?
* Какого улучшение производительности получается при передачи 8192 байт данных из BRAM в DDR3? Попробуйте с DDR3-DDR3? BRAM-BRAM?
* Какого улучшение производительности при передачи 256 байт данных из BRAM в DDR3? Попробуйте с DDR3-DDR3? BRAM-BRAM?

## Дальнейшее изучение

При наличии свободного времени можно также изучить:

* Исследуйте предоставленный C-код. Исследуйте конфигурацию PS DMA.

## Источники:

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/microzed/microzed-board-family (только с VPN)

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/picozed/picozed-board-family (только с VPN)

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/zedboard/zedboard-board-family (только с VPN)

https://www.xilinx.com/products/silicon-devices/soc/zynq-7000.html

https://www.xilinx.com/products/design-tools/vitis.html

https://www.xilinx.com/developer/products/vivado.html

https://docs.xilinx.com/r/en-US/ug949-vivado-design-methodology/Introduction

https://docs.xilinx.com/v/u/en-US/ug1046-ultrafast-design-methodology-guide


## Ответы

> Был ли необходим новый *Platform Project* для этого приложения?

Platform Project необходимо генерировать заново каждый раз когда мы вносим изменения в аппаратную платформу. Мы назвали ее одинаково, однако она является новой.

> Какого улучшение производительности получается при передачи 8192 байт данных из BRAM в DDR3? Попробуйте с DDR3-DDR3? BRAM-BRAM?

11x, 3x, 20x (результаты могут варьироваться)

> Какого улучшение производительности при передачи 256 байт данных из BRAM в DDR3? Попробуйте с DDR3-DDR3? BRAM-BRAM?

10x, 1x, 18x (результаты могут варьироваться)